# create-solana-program

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  README.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
.changeset/: afraid-queens-grow.md  blue-fishes-grow.md  bright-trains-glow.md  brown-dragons-kiss.md  brown-jobs-dress.md  calm-garlics-trade.md  chilly-hotels-report.md  clever-geese-march.md  clever-wombats-grin.md  cold-jeans-develop.md  config.json  cuddly-cheetahs-kick.md  cuddly-forks-mate.md  curly-olives-lie.md  curvy-cheetahs-brush.md  cyan-trainers-own.md  dull-horses-taste.md  eight-ants-camp.md  eighty-bulldogs-poke.md  fair-carrots-refuse.md  fifty-experts-hunt.md  fifty-owls-retire.md  fluffy-seas-walk.md  four-actors-protect.md  friendly-poets-push.md  funny-lamps-relax.md  giant-taxis-sneeze.md  hip-beds-complain.md  honest-donuts-obey.md  hot-fireants-listen.md  hot-suns-marry.md  hungry-fans-promise.md  hungry-forks-worry.md  hungry-laws-jam.md  kind-flowers-breathe.md  late-bottles-clap.md  lazy-bats-shake.md  lazy-cheetahs-hug.md  lovely-actors-jog.md  lovely-gorillas-invite.md  (+39 more)
locales/: en-US.json  (+1 more)
template/clients/rust/clients/rust/: Cargo.toml  Cargo.toml.njk  README.md  README.md.njk
template/clients/rust/clients/rust/src/: lib.rs  lib.rs.njk
template/clients/rust/clients/rust/tests/: create.rs
template/programs/counter-shank/program/: Cargo.toml  Cargo.toml.njk  README.md  README.md.njk  idl.json
template/programs/counter-shank/program/src/: entrypoint.rs  error.rs  lib.rs  utils.rs
(+120 files in other folders)
